<resources>
    <string name="app_name">Projemanag</string>
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="sign_in_description_text">Enter your email id and password, to login with us</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="please_wait">Please, wait…</string>
    <string name="please_click_back_again_to_exit">Please click Back again to exit</string>
    <string name="please_enter_name">Please enter a name</string>
    <string name="please_enter_email">Please enter an email</string>
    <string name="please_enter_password">Please enter a password</string>
    <string name="you_have_successfully_registered">You have successfully registered the email address</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="mobile">Mobile</string>
    <string name="update">Update</string>
    <string name="you_denied_read_storage_permission">You denied read storage permission. Please, allow it in settings</string>
    <string name="user_updated_successfully">User data updated successfully</string>
    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>
    <string name="board_created_successfully">Board created successfully</string>
    <string name="no_boards_available">No boards are available</string>
    <string name="task_list">Task List</string>
    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>
    <string name="please_enter_list_name">Please enter list name</string>
    <string name="alert">Alert</string>
    <string name="you_want_to_delete_task">Are you sure you want to delete %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_enter_card_name">Please enter card name</string>
    <string name="members">Members</string>
    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="card_details">Card details</string>
    <string name="delete_card">Delete Card</string>
    <string name="confirmation_message_to_delete_card">Do you want to delete card %s?</string>
    <string name="str_select_label_color">Select Label Color</string>
    <string name="default_notification_channel_id">1</string>
    <string name="notification_permission_is_denied">Notification permission is denied</string>
    <string name="please_allow_notifications_in_settings">Please, allow notifications in app settings</string>
    <string name="ok">OK</string>
</resources>