<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".presenter.main.my_profile.MyProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_my_profile"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/nav_my_profile"
            app:navigationIcon="@drawable/ic_white_color_back_24dp"
            app:popupTheme="@style/PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginHorizontal="@dimen/my_profile_horizontal_margin"
        android:layout_marginVertical="@dimen/my_profile_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        android:elevation="@dimen/card_view_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/my_profile_card_view_padding">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user_image"
                android:layout_width="@dimen/my_profile_image_size"
                android:layout_height="@dimen/my_profile_image_size"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_user_place_holder" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/my_profile_item_margin_vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/et_text_size"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/my_profile_item_margin_vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:textSize="@dimen/et_text_size"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/my_profile_item_margin_vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:textSize="@dimen/et_text_size"
                    android:hint="@string/mobile" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/my_profile_button_margin_top"
                android:background="@drawable/shape_button_rounded"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>